--- a/style.css
+++ b/style.css
@@ -3,10 +3,31 @@
 }
 
 .hero {
+    background-color: #1f2937;
+    color: #f9faf8;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    gap: 8px;
+    padding: 16px;
 }
 
+.hero a {
+    color:#e5e7eb;
+    font-size: 18px;
+}
+
+.hero h1 {
+    font-size: 48px;
+    font-weight: 900;
+}
+.hero h3 {
+    font-size: 24px;
+}
+button {
+    background-color: #3882f6;
+    color: white;
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -18,6 +39,7 @@ a {
 
 .hero-content {
     display: flex;
+    gap:8px;
 }
 .hero-left {
     display: flex;
@@ -30,16 +52,42 @@ a {
     align-items: center;
     justify-content: center;
 }
-
+.content h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+.card div{
+    height: 180px;
+    width: 170px;
+    border-radius: 10px;
+    border: 4px solid #3882f6;
+}
 .cards {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .quoted-section {
+    background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
 }
 
 .call-to-action {
     display: flex;
+}
+footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
